Fix layout shift when mobile toc opens

--- a/css/module/global.css
+++ b/css/module/global.css
@@ -23,6 +23,7 @@ body {
     font-size: var(--text-size-base);
     font-variation-settings: 'wdth' 100;
     font-weight: var(--font-regular);
+    scrollbar-gutter: stable;
 }
 
 body::after {
